--- a/Assets/Scripts/TODO.txt
+++ b/Assets/Scripts/TODO.txt
@@ -2,9 +2,7 @@
 
 -FARE PULIZIA GENERALE
 
-
--SISTEMARE LE POSITION --- resize per app
--LE POSIZIONI DELLE CARTE SONO TROPPO LONTANE (RIVEDERE)
+-resize per app
 -SISTEMARE COLLIDER 
 -FARE BOTTONI CON GRAFICA
 -METTERE EFFETTI SONORI 
